# clip-history

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  database-design.md  roadmap.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  shortcut.rs  tray.rs
src-tauri/src/clipboard/: listener.rs  mod.rs  types.rs
src-tauri/src/commands/: config.rs  history.rs
src-tauri/src/db/: db.rs  mod.rs  models.rs
src/components/: HistoryItem.tsx  HistoryList.tsx  ImagePreview.tsx  SearchBar.tsx  Settings.tsx  Toast.tsx
src/hooks/: useTheme.ts  useToast.ts  useUpdater.ts
src/i18n/: index.tsx
src/i18n/locales/: en.ts  zh.ts
src/lib/: highlight.test.ts  highlight.ts  tauri.ts  utils.test.ts  utils.ts
src/stores/: historyStore.test.ts  historyStore.ts  settingsStore.test.ts  settingsStore.ts
src/styles/: globals.css
src/types/: index.ts
website/: .gitignore  AGENTS.md  CLAUDE.md  package.json  wrangler.jsonc
website/scripts/: generate-changelog.mjs
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  ImageLightbox.tsx  Navbar.tsx  Privacy.tsx  Screenshots.tsx  TechStack.tsx  ThemeToggle.tsx  Why.tsx
website/src/config/: site.ts
website/src/hooks/: useMacOSDownloadLink.ts
(+2 files in other folders)
